<resources>
    <string name="app_name">AndroidERestaurant</string>
    <string name="starter">Entrées</string>
    <string name="main">Plats</string>
    <string name="finish">Desserts</string>
    <string name="hello">Bienvenue</string>
    <string name="chez">chez</string>
    <string name="nom_restaurant">ZouaveRestaurant</string>
    <string name="on_rigole">POV: tu es le poisson</string>
    <string name="Liste_des_ingrédiants">Liste des ingrédiants:</string>
    <string name="title_activity_meal">Meal</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>