<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sans_titre"
    tools:context=".HomeActivity">

    <Button
        android:id="@+id/mainButton"
        android:layout_width="150dp"
        android:layout_height="63dp"
        android:backgroundTint="#2196F3"
        android:fontFamily="casual"
        android:text="@string/main"
        android:textSize="20sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <Button
        android:id="@+id/starterButton"
        android:layout_width="150dp"
        android:layout_height="63dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#2196F3"
        android:fontFamily="casual"
        android:text="@string/starter"
        android:textSize="20sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/mainButton"
        app:layout_constraintEnd_toEndOf="@+id/mainButton"
        app:layout_constraintStart_toStartOf="@+id/mainButton" />

    <Button
        android:id="@+id/finishButton"
        android:layout_width="150dp"
        android:layout_height="63dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#2196F3"
        android:fontFamily="casual"
        android:text="@string/finish"
        android:textSize="20sp"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="@+id/mainButton"
        app:layout_constraintStart_toStartOf="@+id/mainButton"
        app:layout_constraintTop_toBottomOf="@+id/mainButton" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/hello"
        android:textColor="#03A9F4"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toEndOf="@+id/Bob"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/chez"
        android:textColor="#03A9F4"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/nom_restaurant"
        android:textColor="#03A9F4"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />

    <ImageButton
        android:id="@+id/Phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:srcCompat="@android:drawable/ic_menu_call" />

    <ImageView
        android:id="@+id/Hugo"
        android:layout_width="197dp"
        android:layout_height="213dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012"
        app:srcCompat="@drawable/zouaverestaurant" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="136dp"
        android:layout_height="30dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="06 10 82 91 32"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

    <ImageView
        android:id="@+id/Bob"
        android:layout_width="251dp"
        android:layout_height="384dp"
        android:src="@drawable/sans_titre_3"
        app:layout_constraintBottom_toBottomOf="@+id/Hugo"
        app:layout_constraintEnd_toEndOf="@+id/Hugo"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/Hugo"
        app:layout_constraintTop_toTopOf="@+id/Hugo"
        app:layout_constraintVertical_bias="0.97" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cute_font"
        android:text="@string/on_rigole"
        app:layout_constraintBottom_toBottomOf="@+id/Hugo"
        app:layout_constraintStart_toEndOf="@+id/Hugo"
        app:layout_constraintTop_toTopOf="@+id/Hugo"
        app:layout_constraintVertical_bias="0.90999997" />

</androidx.constraintlayout.widget.ConstraintLayout>