<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="412dp"
        android:layout_height="731dp"
        android:background="#00BCD4"
        android:scaleX="10"
        android:scaleY="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/mainButton"
        android:layout_width="150dp"
        android:layout_height="63dp"
        android:backgroundTint="#2196F3"
        android:text="@string/main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <Button
        android:id="@+id/starterButton"
        android:layout_width="150dp"
        android:layout_height="63dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#2196F3"
        android:text="@string/starter"
        app:layout_constraintBottom_toTopOf="@+id/mainButton"
        app:layout_constraintEnd_toEndOf="@+id/mainButton"
        app:layout_constraintStart_toStartOf="@+id/mainButton" />

    <Button
        android:id="@+id/finishButton"
        android:layout_width="150dp"
        android:layout_height="63dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#2196F3"
        android:text="@string/finish"
        app:layout_constraintEnd_toEndOf="@+id/mainButton"
        app:layout_constraintStart_toStartOf="@+id/mainButton"
        app:layout_constraintTop_toBottomOf="@+id/mainButton" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chez"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/nom_restaurant"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/editTextPhone"
        app:layout_constraintTop_toTopOf="@+id/editTextPhone"
        app:srcCompat="@android:drawable/ic_menu_call" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="134dp"
        android:layout_height="41dp"
        android:ems="10"
        android:inputType="phone"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.97"
        tools:text="06 10 28 91 99" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="197dp"
        android:layout_height="213dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.050000012"
        app:srcCompat="@drawable/zouaverestaurant" />

</androidx.constraintlayout.widget.ConstraintLayout>